basic module compilation works, jlink works with maven dependency, not local jar file