@@ -1,5 +1,8 @@
 plugins {
     application
+    `java-library`
+    id("org.beryx.jlink") version "3.1.1"
+    id("org.javamodularity.moduleplugin") version "1.8.15"
 }
 
 application {
@@ -12,11 +15,11 @@ repositories {
 }
 
 dependencies {
-    implementation(files("/usr/share/java/gson.jar"))
-    implementation(files("/usr/share/java/guava.jar"))
+    // implementation(files("/usr/share/java/gson.jar"))
+    // implementation(files("libs/guava.jar"))
+    implementation("com.google.code.gson:gson:2.11.0")
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.10.3") // JUnit Jupiter API
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.3") // JUnit Jupiter Engine
-
 }
 
 testing {
@@ -34,7 +37,27 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
     }
+    modularity.inferModulePath.set(true)
 }
+
+jlink {
+    imageName.set("custom-runtime")
+    customImage {
+        appModules = listOf("com.google.gson")
+    }
+    launcher {
+        name = "kauma"
+        // jvmArgs.addAll("-Xmx512m") // Optional: Specify JVM arguments
+    }
+    // addExtraModulePath("/usr/share/java")
+    addExtraDependencies("com.google")
+    // options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
+    // mergedModule {
+    //     requires("java.base")
+    //     requires("gson")
+    // }
+}
+
 
 tasks.register<Jar>("fatJar") {
     manifest {
@@ -51,4 +74,12 @@ tasks.register<Jar>("fatJar") {
 // Task to run tests
 tasks.test {
     useJUnitPlatform() // Enable JUnit Platform for the test task
+}
+
+tasks.compileJava {
+    options.javaModuleVersion = provider { "17" }
+    // options.compilerArgs.addAll(listOf(
+    //     // "--module-path", "/usr/share/java",
+    //     "--add-modules", "gson",
+    // ))
 }
